WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282186
Null pointer dereference in IndexValueStore::Iterator::nextIndexEntry
https://bugs.webkit.org/show_bug.cgi?id=282186
Summary
Null pointer dereference in IndexValueStore::Iterator::nextIndexEntry
Sihui Liu
Reported
2024-10-28 11:05:07 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2024-10-28 11:07:05 PDT
rdar://136799874
Sihui Liu
Comment 2
2024-10-28 11:17:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35803
EWS
Comment 3
2024-10-28 20:28:11 PDT
Committed
285814@main
(5352e8654190): <
https://commits.webkit.org/285814@main
> Reviewed commits have been landed. Closing PR #35803 and removing active labels.
EWS
Comment 4
2024-12-11 11:25:11 PST
Committed
283286.579@safari-7620-branch
(9d8797837e55): <
https://commits.webkit.org/283286.579@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2393 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug